--- a/static/portofolio-1/index.html
+++ b/static/portofolio-1/index.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.ionvarsescu.tk">Back to the blog</a>
+                <a class="navbar-brand" href="http://www.ionvarsescu.tk">not good</a>
             </div>
             <div>
                 <div class="collapse navbar-collapse" id="myNavbar">
